@@ -1,6 +1,8 @@
 dir = File.dirname(__FILE__)
 require "#{dir}/resources/runners"
+require "#{dir}/resources/runners/runner"
 require "#{dir}/resources/runners/firefox_runner"
+require "#{dir}/resources/runners/iexplore_runner"
 require "#{dir}/resources/file"
 require "#{dir}/resources/dir"
 require "#{dir}/resources/file_not_found"
